--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio do Borges</title>
+    <title>Portfólio do Guilherme</title>
     <link rel="stylesheet" href="css/geral.css">
     <link rel="stylesheet" href="css/home.css">
 
